Hackonix-Website/static/css/timeline-styles.css
/* :root {
  --lg1: 0deg, rgba(0, 0, 0, 1) 0%, rgba(60, 57, 57, 1) 29%,
    rgba(72, 69, 69, 1) 35%, rgba(84, 81, 81, 1) 41%, rgba(185, 177, 177, 1) 90%,
    rgba(205, 197, 197, 1) 100%;
}

.timeline-container {
  background-color: #262b30;
  margin-top: 10rem;
}
.timeline-header {
  position: relative;
  padding: 3rem;
  font-size: 4rem;;
  margin-top: 3rem;
  font-family: "Dense", "Montserrat", sans-serif;
} */
/* .timeline ul {
  padding: 50px 0;
}

.timeline ul li {
  list-style-type: none;
  position: relative;
  width: 6px;
  margin: 0 auto;
  padding: 4rem 0rem 2rem 0rem;
  background: #fff;
}

.timeline ul li::after {
  content: "";
  position: absolute;
  left: 50%;
  bottom: 0;
  transform: translateX(-50%);
  width: 30px;
  height: 30px;
  border-radius: 50%;
  background: inherit;
  z-index: 1;
}

.timeline ul li div {
  position: relative;
  bottom: 0;
  width: 400px;
  padding: 15px;
  border-radius: 10px;
  background: #212120;
}

.timeline ul li div::before {
  content: "";
  position: absolute;
  bottom: 7px;
  width: 0;
  height: 0;
  border-style: solid;
}

.timeline ul li:nth-child(odd) div {
  left: 45px;
}

.timeline ul li:nth-child(odd) div::before {
  left: -15px;
  border-width: 8px 16px 8px 0;
  border-color: transparent #212120 transparent transparent;
}

.timeline ul li:nth-child(even) div {
  left: -439px;
}

.timeline ul li:nth-child(even) div::before {
  right: -15px;
  border-width: 8px 0 8px 16px;
  border-color: transparent transparent transparent #212120;
}

.timeline ul li::after {
  transition: background 0.5s ease-in-out;
}

.timeline ul li.in-view::after {
  background: #ffffff;
}

.timeline ul li div {
  visibility: hidden;
  opacity: 0;
  transition: all 0.5s ease-in-out;
}

.timeline ul li:nth-child(odd) div {
  transform: translate3d(200px, 0, 0);
}

.timeline ul li:nth-child(even) div {
  transform: translate3d(-200px, 0, 0);
}

.timeline ul li.in-view div {
  transform: none;
  visibility: visible;
  opacity: 1;
}

@media screen and (max-width: 600px) {
  .timeline ul li {
    margin-left: 20px;
  }
  .timeline ul li div {
    width: calc(100vw - 91px);
  }
  .timeline ul li:nth-child(even) div {
    left: 45px;
  }
  .timeline ul li:nth-child(even) div::before {
    left: -15px;
    border-width: 8px 16px 8px 0;
    border-color: transparent #212120 transparent transparent;
  }
}
.timeline-clippy ul li::after {
  width: 40px;
  height: 40px;
  border-radius: 0;
}

.timeline-rhombus ul li::after {
  clip-path: polygon(50% 0%, 100% 50%, 50% 100%, 0% 50%);
}

.timeline-rhombus ul li div::before {
  bottom: 12px;
}

.timeline-star ul li::after {
  clip-path: polygon(
    50% 0%,
    61% 35%,
    98% 35%,
    68% 57%,
    79% 91%,
    50% 70%,
    21% 91%,
    32% 57%,
    2% 35%,
    39% 35%
  );
}

.timeline-heptagon ul li::after {
  clip-path: polygon(
    50% 0%,
    90% 20%,
    100% 60%,
    75% 100%,
    25% 100%,
    0% 60%,
    10% 20%
  );
}

.timeline-infinite ul li::after {
  animation: scaleAnimation 2s infinite;
}  */

/* html,
body {
  position: relative;
  height: 100%;
  overflow: hidden;
  background: #eee;
}

body {
  font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
  font-size: 16px;
  margin: 0;
  padding: 0;
} */

/* html,
body {
  position: relative;
  height: 100%;
  overflow: hidden;
  background: #eee;
} */

/* body {
  font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
  font-size: 16px;
  margin: 0;
  padding: 0;
} */

.timeline-container {
  overflow: hidden;
}
.timeline-header {
  font-family: "Roboto", Helvetica, sans-serif;
  letter-spacing: 0px;
  font-size: 4rem;
  font-weight: bold;
  margin-bottom: 4rem;
}
.swiper-container-wrapper--timeline .swiper-slide {
  display: grid;
  /* background: #fff; */
  /* min-height: 100px; */
  border-radius: 10px;
  align-items: center;
  justify-content: center;
  grid-gap:1.5rem;
  padding: 0;
}
.s-title {
  height: fit-content;
}
.swiper-container-wrapper--timeline .swiper-slide .container {
  padding: 0;
}
.swiper-container-wrapper--timeline .swiper-slide .s-title {
  font-size: 1.5rem;
  opacity: 0;
  transition: 0.5s ease 0.5s;
}

@media screen and (max-width: 450px) {
  /* .swiper-container-wrapper--timeline .swiper-slide .s-title {
    font-size: 1rem;
  } */
  .swiper-container-wrapper--timeline .swiper-slide {
    justify-content: end;
    align-items: flex-end;
  }
  .s-title {
    width: 100%;
  }
}

.swiper-container-wrapper--timeline .swiper-slide-active .s-title {
  opacity: 1;
}
.swiper-container-wrapper--timeline .swiper-pagination-progressbar {
  position: relative;
  margin-bottom: 70px;
  background-color: transparent;
  height: 4px;
  border-bottom: 1px solid #888;
  width: 75%;
}
.swiper-container-wrapper--timeline .swiper-pagination-progressbar-fill {
  background-color: #000;
  height: 3px;
  top: 2px;
}
.swiper-container-wrapper--timeline .swiper-pagination-progressbar:before {
  position: absolute;
  top: 2px;
  left: -100%;
  width: 100%;
  height: 3px;
  background-color: #000;
  content: "";
}
.swiper-container-wrapper--timeline .swiper-pagination-progressbar:after {
  position: absolute;
  top: 3px;
  right: -100%;
  width: 100%;
  height: 1px;
  background-color: #888;
  content: "";
}
.swiper-container-wrapper--timeline .swiper-pagination-custom {
  position: relative;
  list-style: none;
  margin: 1rem 0;
  padding: 0;
  display: flex;
  line-height: 1.66;
  bottom: 0;
  z-index: 11;
  width: 75%;
  display: flex;
}
.swiper-container-wrapper--timeline
  .swiper-pagination-custom
  .swiper-pagination-switch {
  position: relative;
  width: 100%;
  height: 30px;
  line-height: 30px;
  display: block;
}
.swiper-container-wrapper--timeline
  .swiper-pagination-custom
  .swiper-pagination-switch
  .switch-title {
  position: absolute;
  font-weight: 400;
  right: 0;
  transform: translateX(50%);
  transition: 0.2s all ease-in-out;
  transition-delay: 0s;
  cursor: pointer;
  z-index: 1;
}
.swiper-container-wrapper--timeline
  .swiper-pagination-custom
  .swiper-pagination-switch
  .switch-title:after {
  position: absolute;
  top: calc(100% + 19px);
  right: 50%;
  transform: translateX(50%) translateY(-50%);
  width: 12px;
  height: 12px;
  background: #000;
  border-radius: 2rem;
  content: "";
  transition: 0.2s all ease-in-out;
  transition-delay: 0s;
  z-index: 1;
}
.swiper-container-wrapper--timeline
  .swiper-pagination-custom
  .swiper-pagination-switch.active
  .switch-title {
  font-weight: 400;
  transition-delay: 0.4s;
}
.swiper-container-wrapper--timeline
  .swiper-pagination-custom
  .swiper-pagination-switch.active
  .switch-title:after {
  background: white;
  width: 25px;
  height: 25px;
  transition-delay: 0.4s;
}
.swiper-container-wrapper--timeline
  .swiper-pagination-custom
  .swiper-pagination-switch.active
  ~ .swiper-pagination-switch
  .switch-title {
  color: #888;
  font-weight: 16px;
}
.swiper-container-wrapper--timeline
  .swiper-pagination-custom
  .swiper-pagination-switch.active
  ~ .swiper-pagination-switch
  .switch-title:after {
  background: #888;
}

.swiper-wrapper {
  display: flex;
  flex-direction: row;
  width: 300vw;
}
.swiper-slide {
  left: 0;
  margin-left: 0;
}

